# ScienceNOW

./: README.md  alembic.ini  arxiv-metadata-oai-2023-11-13.json-resumptionToken.txt  demo.py  eval_2021.py  pyproject.toml  setup.py
alembic/: env.py
alembic/data/: arxiv_articles.json
alembic/versions/: 72945dfe4e60_.py  7480a051ab43_.py
models/: BERTopic.py
sciencenow/: main.py  settings.py
sciencenow/api/: arxiv.py
sciencenow/api/utils/: arxiv.py
sciencenow/app/: app.py
sciencenow/config/: __init__.py  config.py  secrets.yaml
sciencenow/core/: clustering.py  dataset.py  dimensionality.py  embedding.py  experiment.py  model.py  pipelines.py  steps.py  utils.py
sciencenow/data/: arxivprocessor.py  preprocessing.py  process_arxiv_twitter.py  scraper.py  synthdata.py  update_arxiv_snapshot.py
sciencenow/db/: db_models.py  db_setup.py  mixins.py  settings.py
sciencenow/models/: BERTopic.py  arxiv_stream.py  bootstrap.py  scraper.py  train.py  trends.py
sciencenow/models/experiments/: ANTM.py  BERTopic.py  antm_dynamic.py  bootstrap.py  dataloader.py  (+4 more)
sciencenow/postprocessing/: eval.py  trends.py
sciencenow/pydantic_schemas/: arxiv.py
sciencenow/sources/: arxivsource.py  base.py  redditsource.py  twittersource.py
sciencenow/utils/: plotting.py  viz.py  wrappers.py
scripts/: eval.sh  evaluate_bertopic.py  processor_setup.py  synthetic_trends.py  train_semisupervised.py  weak_signals.py
scripts/slurms/: 2021_coherence.sh
tests/: test_datasets.py  test_pipelines.py  test_preprocessing.py  test_steps.py  test_train.py  test_visualizer.py
